Mobile theme: - Fix jumping issue in edit dialog, happened only on iOS Safari - Fix search widget height

--- a/pixelegg/css/mobile.less
+++ b/pixelegg/css/mobile.less
@@ -793,8 +793,6 @@
 			position:absolute;
 			display: none;
 			z-index: 999;
-			-webkit-overflow-scrolling: touch;
-			overflow-y:scroll;
 			.egw_fw_mobile_popupFrame {
 				width: 100%;
 				height: 100%;
