--- a/pixelegg/mobile/fw_mobile.less
+++ b/pixelegg/mobile/fw_mobile.less
@@ -889,6 +889,9 @@
 		.et2_button_icon {height:32px;}
 		.popupMainDiv {
 			padding-top: 60px !important;
+			padding-left:8px;
+			padding-right:8px;
+			overflow-x:hidden;
 			* {
 				.mob-fontsize-n;
 				font-family: Verdana, "Lucida Grande", Helvetica, Sans-Serif;
@@ -968,6 +971,7 @@
 
 			form.et2_container div table.et2_grid tbody tr .row td .et2_box_widget input {margin:0 5px 0 0;}
 		}
+		div#popupMainDiv {padding:0;}
 		.dialogHeadbar {
 			button[class*="et2_button_with_image"]:not([class*="et2_toolbar_hasCaption"]) {
 				.white-svg;
@@ -1191,7 +1195,7 @@
 			}
 			input {
 				width:100%;
-				height:45px;
+				height:42px;
 				margin:0;
 				top:0;
 				outline: none;
@@ -1202,12 +1206,11 @@
 				top: 0px;
 				left: -50px;
 				background-color: white;
-				height: 49px;
+				height: 50px;
 				width: 50px;
 				background-image: url("../images/cancelled.svg");
 				background-position: center;
 				background-repeat: no-repeat;
-				border-bottom: 1px solid #e6e6e6;
 				background-size: 24px 24px;
 			}
 			.flex{
